--- a/RussianCasualtiesInTheWar2022/RussianCasualtiesInTheWar2022/Views/ListController/Header/HeaderReusableView.xib
+++ b/RussianCasualtiesInTheWar2022/RussianCasualtiesInTheWar2022/Views/ListController/Header/HeaderReusableView.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,25 +15,25 @@
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2022" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGN-vS-lcG">
-                    <rect key="frame" x="5" y="5" width="55" height="40"/>
+                    <rect key="frame" x="15" y="5" width="55" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="DGN-vS-lcG" secondAttribute="height" multiplier="55:40" id="Qib-ch-NUt"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                    <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="February" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yy5-cM-Ier">
-                    <rect key="frame" x="65" y="5" width="250" height="40"/>
+                    <rect key="frame" x="75" y="5" width="230" height="40"/>
                     <fontDescription key="fontDescription" type="system" pointSize="26"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
+            <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="DGN-vS-lcG" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" constant="5" id="2l1-mH-w2m"/>
-                <constraint firstAttribute="trailing" secondItem="Yy5-cM-Ier" secondAttribute="trailing" constant="5" id="5pL-Lq-BN9"/>
+                <constraint firstItem="DGN-vS-lcG" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" constant="15" id="2l1-mH-w2m"/>
+                <constraint firstAttribute="trailing" secondItem="Yy5-cM-Ier" secondAttribute="trailing" constant="15" id="5pL-Lq-BN9"/>
                 <constraint firstItem="VXr-Tz-HHm" firstAttribute="bottom" secondItem="DGN-vS-lcG" secondAttribute="bottom" constant="5" id="6If-3w-nco"/>
                 <constraint firstItem="VXr-Tz-HHm" firstAttribute="bottom" secondItem="Yy5-cM-Ier" secondAttribute="bottom" constant="5" id="EtC-dl-WDd"/>
                 <constraint firstItem="DGN-vS-lcG" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" constant="5" id="Hul-gm-rMj"/>
@@ -46,4 +47,9 @@
             <point key="canvasLocation" x="131.8840579710145" y="69.642857142857139"/>
         </collectionReusableView>
     </objects>
+    <resources>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
