--- a/RussianCasualtiesInTheWar2022/RussianCasualtiesInTheWar2022/Views/CategoryController/Cell/CategoryTableViewCell.xib
+++ b/RussianCasualtiesInTheWar2022/RussianCasualtiesInTheWar2022/Views/CategoryController/Cell/CategoryTableViewCell.xib
@@ -22,8 +22,8 @@
                             <constraint firstAttribute="width" secondItem="VHj-99-6g5" secondAttribute="height" multiplier="1:1" id="vzu-c4-xBq"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41B-6t-Off">
-                        <rect key="frame" x="78" y="0.0" width="242" height="78"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="41B-6t-Off">
+                        <rect key="frame" x="86" y="0.0" width="226" height="78"/>
                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -34,8 +34,8 @@
                     <constraint firstAttribute="bottom" secondItem="41B-6t-Off" secondAttribute="bottom" id="SXR-jC-WhD"/>
                     <constraint firstAttribute="bottom" secondItem="VHj-99-6g5" secondAttribute="bottom" id="VYa-cF-B4G"/>
                     <constraint firstItem="VHj-99-6g5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Wal-Ov-zsT"/>
-                    <constraint firstItem="41B-6t-Off" firstAttribute="leading" secondItem="VHj-99-6g5" secondAttribute="trailing" id="bQq-Fj-hPj"/>
-                    <constraint firstAttribute="trailing" secondItem="41B-6t-Off" secondAttribute="trailing" id="fQf-yu-eeh"/>
+                    <constraint firstItem="41B-6t-Off" firstAttribute="leading" secondItem="VHj-99-6g5" secondAttribute="trailing" constant="8" id="bQq-Fj-hPj"/>
+                    <constraint firstAttribute="trailing" secondItem="41B-6t-Off" secondAttribute="trailing" constant="8" id="fQf-yu-eeh"/>
                     <constraint firstItem="VHj-99-6g5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="i60-Mw-gC7"/>
                 </constraints>
             </tableViewCellContentView>
