--- a/RussianCasualtiesInTheWar2022/RussianCasualtiesInTheWar2022/Views/ListController/ListCell/ListCollectionViewCell.xib
+++ b/RussianCasualtiesInTheWar2022/RussianCasualtiesInTheWar2022/Views/ListController/ListCell/ListCollectionViewCell.xib
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,14 +22,14 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="Vtt-IM-TQW"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" systemColor="systemGray2Color"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zX-fA-kl0">
                         <rect key="frame" x="0.0" y="0.0" width="53" height="52"/>
                         <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                        <color key="textColor" name="customlabelColor"/>
+                        <color key="textColor" systemColor="systemBlueColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -54,9 +53,9 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <namedColor name="customlabelColor">
-            <color red="0.045278936624526978" green="0.5" blue="0.80401545763015747" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
